# llmfiles

./: .gitignore  .llmfiles.toml.example  CHANGELOG.md  CLAUDE.md  CODE_TREE.md  README.md  pyproject.toml  requirements.txt  spec.md
llmfiles/: __init__.py  __main__.py  ast_test.py  cli.py  config.py  config_file.py  discovery.py  exceptions.py  git_utils.py  introspect_tspack.py  logging_setup.py  main.py  output.py  processing.py  templating.py  util.py
llmfiles/cli/: console_output.py  interface.py  options.py
llmfiles/config/: loader.py  settings.py
llmfiles/core/: git_utils.py  github.py  import_tracer.py  jedi_tracer.py  output.py  pipeline.py  processing.py
llmfiles/core/discovery/: __init__.py  dependency_resolver.py  git_utils.py  path_resolution.py  pattern_expansion.py  pattern_matching.py  walker.py
llmfiles/core/templating/: __init__.py  context_builder.py  default_templates.py  helpers.py  renderer.py
llmfiles/structured_processing/: ast_utils.py  chunking_strategies.py  data_summarizers.py
llmfiles/structured_processing/language_parsers/: javascript_parser.py  python_parser.py
llmfiles/tests/: conftest.py  test_cli_profiles_and_save.py  test_output.py  test_templating.py
tests/: __init__.py  test_cli.py  test_dependency_resolution.py  test_discovery.py  test_git_utils.py  test_github.py  test_import_tracer.py  test_jedi_tracer.py  test_pattern_expansion.py  test_processing.py
