[project]
name = "llmfiles"
version = "0.4.0"
description = "handy cli tool to build LLM prompts from files, codebases, git info, and templates."
readme = "README.md"
requires-python = ">=3.11" 
license = { text = "Apache-2.0" }
authors = [
    { name = "Fred Bliss"}, 
]
classifiers = [ 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "click>=8.0",         # For building the command-line interface
    "pathspec>=0.11",     # For .gitignore style pattern matching
    "pybars3>=0.9",       # Handlebars templating engine
    "tiktoken>=0.5",      # For OpenAI token counting
    "pyperclip>=1.8",     # For clipboard operations (copying output)
    "rich>=13.0",         # to make things... rich? yes.
    "PyYAML>=5.0",        # For parsing YAML files and trunc'ing large data
    "structlog",          # Better logging outputs
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "types-pyyaml", "types-toml", "ruff"]

[project.scripts]
llmfiles = "llmfiles.cli:main_cli_entrypoint"

[project.urls]
homepage = "https://github.com/fblissjr/llmfiles"
repository = "https://github.com/fblissjr/llmfiles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmfiles"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v --cov=llmfiles --cov-report=term-missing"