[project]
name = "llmfiles"
version = "0.6.0"
description = "build llm prompts from files, codebases, with structure-aware chunking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "apache-2.0" }
authors = [{ name = "fred bliss" }]
dependencies = [
    "click>=8.0",
    "pathspec>=0.11",
    "rich>=13.0",
    "structlog",
    "tree-sitter>=0.21.3",
    "tree-sitter-language-pack",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "types-toml", "ruff"]

[project.scripts]
llmfiles = "llmfiles.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmfiles"]
